# opennsfw2

./: .gitignore  CITATION.cff  Dockerfile  Dockerfile.gpu  LICENSE  README-API.md  README-HTTP.md  README.md  docker-compose.yml  requirements-api.txt  requirements-dev.txt  requirements.txt  setup.cfg  test_api.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
app/: main.py  models.py  pydantic_models.py
app/routers/: health.py  prediction.py
app/services/: file_service.py  prediction_service.py
app/utils/: exceptions.py  validation.py
opennsfw2/: __init__.py  _compat.py  _download.py  _image.py  _inference.py  _inspection.py  _model.py  _typing.py  image.py  model.py
plot/: plot.py
tests/: README.md  _test.py  cc_license.txt  install_from_local.sh  install_from_local_and_test.sh  run_code_checks.sh
tests/integration/: README.md  test_api_integration.py
tests/unit/: test_core.py
