[metadata]
name = opennsfw2
version = 0.1.0
author = Bosco Yung
author_email = xtorch501@gmail.com
description = TensorFlow 2 implementation of the Yahoo Open-NSFW model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhky/opennsfw2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    tensorflow>=2.0.0

[options.package_data]
targetran = py.typed