[metadata]
name = opennsfw2
version = attr: opennsfw2.__version__
author = attr: opennsfw2.__author__
author_email = xtorch501@gmail.com
description = TensorFlow 2 implementation of the Yahoo Open-NSFW model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhky/opennsfw2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    gdown>=4.2.0
    keras-core>=0.1.0
    matplotlib>=3.0.0
    numpy>=1.22.0
    opencv-python>=4.0.0.0
    Pillow>=8.0.0
    scikit-image>=0.18.0
    tqdm>=4.62

[options.package_data]
opennsfw2 = py.typed